Simple Terminal Design Concept

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.23.7",
     "next": "15.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-tsparticles": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
